--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8" >
-        <title>Trawhiz</title>
+        <title>TraWhizz</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Bro Code</a>
+            <a href="#" class="logo">TraWhizz</a>
             <div class="toggle"><img src="toggle.png"></div>
         </header>
         <div class="banner">
             <video src="rickroll.mp4" muted autoplay loop type="mp4"></video>
             <div class="textBox">
-                <h2>Trawhiz</h2>
+                <h2>Navigate Your Adventures with TraWhizz!!</h2>
                 <p>Embark on a seamless journey with our Travel Bot! From itinerary suggestions to real-time updates, experience the convenience of instant travel assistance. Your adventure begins here.</p>
                 <a href="https://github.com/Amarnath-Rao">Read More</a>
             </div>
