--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="textBox">
                 <h2>Navigate Your Adventures with TraWhizz!!</h2>
                 <p>Embark on a seamless journey with our Travel Bot! From itinerary suggestions to real-time updates, experience the convenience of instant travel assistance. Your adventure begins here.</p>
-                <a href="https://amarnath-rao.github.io/Trawhiz-main/">Explore</a>
+                <a href="https://trawhiz.vercel.app/">Explore</a>
             </div>
             <div class="videoBx">
                 <video src="rickroll.mp4" muted autoplay loop type="mp4"></video>
