--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="textBox">
                 <h2>Navigate Your Adventures with TraWhizz!!</h2>
                 <p>Embark on a seamless journey with our Travel Bot! From itinerary suggestions to real-time updates, experience the convenience of instant travel assistance. Your adventure begins here.</p>
-                <a href="https://trawhiz.vercel.app/">Explore</a>
+                <a href="#">Explore</a>
             </div>
             <div class="videoBx">
                 <video src="rickroll.mp4" muted autoplay loop type="mp4"></video>
@@ -30,8 +30,8 @@
         <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
         <df-messenger
           intent="WELCOME"
-          chat-title="Trawhiz"
-          agent-id="f919b63b-56d0-41b1-8f34-0bb56a03894f"
+          chat-title=""
+          agent-id=""
           language-code="en"
         ></df-messenger>
     </body>
